[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Actors/Players/Player.gd" type="Script" id=1]
[ext_resource path="res://Game/Actors/Players/Robot/robot1-machine.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 18.4908

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 51.7853

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z", "collision" ]
player_name = "none"

[node name="Image" type="Sprite" parent="."]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Gun" type="Position2D" parent="Image"]

position = Vector2( 26.2977, 10 )
_sections_unfolded = [ "Transform" ]

[node name="Collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z" ]

[node name="TouchArea" type="Area2D" parent="."]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape2D" parent="TouchArea"]

shape = SubResource( 2 )

[connection signal="area_entered" from="TouchArea" to="." method="_on_TouchArea_area_entered"]

[connection signal="area_exited" from="TouchArea" to="." method="_on_TouchArea_area_exited"]


